[gd_scene load_steps=35 format=2]

[ext_resource path="res://assets/resources/animation/stray_glitch_3.tres" type="Animation" id=1]
[ext_resource path="res://assets/resources/animation/stray_glitch_1.tres" type="Animation" id=2]
[ext_resource path="res://assets/resources/animation/stray_glitch_2.tres" type="Animation" id=3]
[ext_resource path="res://assets/sound/sfx/blinking/blink_3.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sound/sfx/blinking/blink_4.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/sfx/blinking/blink_static_3.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/sfx/skills/pull.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/sfx/blinking/blink_static_5.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/sfx/blinking/blink_static_1.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/sfx/blinking/blink_2.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sound/sfx/blinking/blink_static_4.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sound/sfx/blinking/blink_1.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sound/sfx/blinking/blink_static_2.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sound/sfx/blinking/blink_static_6.wav" type="AudioStream" id=18]
[ext_resource path="res://game/pixel/stray.gd" type="Script" id=20]

[sub_resource type="RectangleShape2D" id=154]
extents = Vector2( 15, 15 )

[sub_resource type="Animation" id=140]
resource_name = "die_stray"
length = 0.7
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.115685, 0.229303, 0.32, 0.379609, 0.46, 0.52, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0, 0.0, 0.8, 0.0, 0.6, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.02, 0.221049, 0.26, 0.52 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=138]
length = 1.3
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.112226, 0.190969, 0.234796, 0.400628, 0.492478, 0.623042, 0.683042, 0.792653, 0.84, 0.941542, 1.02304, 1.06304, 1.18532, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.2, 1.0, 0.2, 1.0, 1.0, 0.55, 1.0, 0.2, 1.0, 0.8, 0.2, 0.55, 0.2, 0.55, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0151901, 0.1, 0.14, 0.26, 0.381363, 0.423848, 0.602841, 0.770539, 0.810941, 0.858078, 1.02257, 1.16591, 1.20439 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=134]
resource_name = "die_stray_2"
length = 1.2
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0671055, 0.192166, 0.249016, 0.309016, 0.369016, 0.409016, 0.554183, 0.595503, 0.695503, 0.855503, 0.995503, 1.0355, 1.1155, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0, 1.0, 0.0, 1.0, 0.0, 0.6, 1.0, 0.0, 1.0, 0.6, 0.6, 1.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.179068, 0.24, 0.346734, 0.388097, 0.574271, 0.634586, 0.834991, 0.956199, 1.05528, 1.13513 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=135]
resource_name = "die_stray_3"
length = 1.1
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.172179, 0.281275, 0.33343, 0.426275, 0.543898, 0.613736, 0.729673, 0.789533, 0.866195, 0.910255, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 0.8, 1.0, 0.0, 0.8, 0.0, 0.6, 0.7, 0.0, 0.7, 1.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.26, 0.32, 0.52, 0.72, 0.74, 0.860964, 0.940807 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=136]
resource_name = "die_stray_4"
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.229303, 0.321458, 0.379609, 0.505558, 0.601764, 0.708506, 0.827506, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0, 0.0, 0.8, 0.0, 0.6, 0.7, 1.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.02, 0.22, 0.259528, 0.479484, 0.5, 0.68, 0.74, 0.860964 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=137]
resource_name = "die_stray_5"
length = 1.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.202442, 0.26, 0.4, 0.48, 0.58, 0.68, 0.8, 0.84, 0.92, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0, 0.0, 0.6, 1.0, 0.0, 1.0, 0.6, 0.6, 1.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.179068, 0.221049, 0.358477, 0.479484, 0.659887, 0.678837, 0.860964, 0.940807, 0.959085 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
}, {
"args": [ "blinking" ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=141]
resource_name = "glitch_intro"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.103803, 0.170441, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.2, 1.0, 0.2, 1.0 ]
}

[sub_resource type="AudioStreamRandomPitch" id=143]
audio_stream = ExtResource( 14 )

[sub_resource type="AudioStreamRandomPitch" id=144]
audio_stream = ExtResource( 12 )
random_pitch = 1.0

[sub_resource type="AudioStreamRandomPitch" id=145]
audio_stream = ExtResource( 4 )

[sub_resource type="AudioStreamRandomPitch" id=146]
audio_stream = ExtResource( 5 )

[sub_resource type="AudioStreamRandomPitch" id=147]
audio_stream = ExtResource( 9 )

[sub_resource type="AudioStreamRandomPitch" id=148]
audio_stream = ExtResource( 15 )

[sub_resource type="AudioStreamRandomPitch" id=149]
audio_stream = ExtResource( 6 )

[sub_resource type="AudioStreamRandomPitch" id=150]
audio_stream = ExtResource( 13 )

[sub_resource type="AudioStreamRandomPitch" id=151]
audio_stream = ExtResource( 8 )

[sub_resource type="AudioStreamRandomPitch" id=152]
audio_stream = ExtResource( 18 )

[sub_resource type="AudioStreamRandomPitch" id=153]
audio_stream = ExtResource( 7 )
random_pitch = 1.2

[node name="Stray" type="Area2D"]
script = ExtResource( 20 )

[node name="ColorPoly" type="Polygon2D" parent="."]
modulate = Color( 1, 1, 1, 0.447059 )
position = Vector2( -16, -16 )
polygon = PoolVector2Array( 1, 1, 1, 0, 31.0008, 0, 31, 1, 32, 1, 32, 31, 31, 31, 31, 32, 1, 32, 1, 31, 0, 31, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 154 )

[node name="NeighborRay" type="RayCast2D" parent="."]
cast_to = Vector2( 45, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die_stray = SubResource( 140 )
anims/die_stray_1 = SubResource( 138 )
anims/die_stray_2 = SubResource( 134 )
anims/die_stray_3 = SubResource( 135 )
anims/die_stray_4 = SubResource( 136 )
anims/die_stray_5 = SubResource( 137 )
anims/glitch_1 = ExtResource( 2 )
anims/glitch_2 = ExtResource( 3 )
anims/glitch_3 = ExtResource( 1 )
anims/glitch_intro = SubResource( 141 )

[node name="Sounds" type="Node2D" parent="."]

[node name="Blinking" type="Node2D" parent="Sounds"]

[node name="Blink1" type="AudioStreamPlayer" parent="Sounds/Blinking"]
stream = SubResource( 143 )
volume_db = -15.0
bus = "GameSfx"

[node name="Blink2" type="AudioStreamPlayer" parent="Sounds/Blinking"]
stream = SubResource( 144 )
volume_db = -15.0
bus = "GameSfx"

[node name="Blink3" type="AudioStreamPlayer" parent="Sounds/Blinking"]
stream = SubResource( 145 )
volume_db = -15.0
bus = "GameSfx"

[node name="Blink4_mute" type="AudioStreamPlayer" parent="Sounds/Blinking"]
stream = SubResource( 146 )
volume_db = -80.0
bus = "GameSfx"

[node name="Blink5_mute" type="AudioStreamPlayer" parent="Sounds/Blinking"]
stream = SubResource( 146 )
volume_db = -80.0
bus = "GameSfx"

[node name="Blink6_mute" type="AudioStreamPlayer" parent="Sounds/Blinking"]
stream = SubResource( 146 )
volume_db = -80.0
bus = "GameSfx"

[node name="BlinkingStatic" type="Node2D" parent="Sounds"]

[node name="BlinkStatic1" type="AudioStreamPlayer" parent="Sounds/BlinkingStatic"]
stream = SubResource( 147 )
pitch_scale = 1.2
bus = "GameSfx"

[node name="BlinkStatic2" type="AudioStreamPlayer" parent="Sounds/BlinkingStatic"]
stream = SubResource( 148 )
pitch_scale = 1.2
bus = "GameSfx"

[node name="BlinkStatic3" type="AudioStreamPlayer" parent="Sounds/BlinkingStatic"]
stream = SubResource( 149 )
pitch_scale = 1.2
bus = "GameSfx"

[node name="BlinkStatic4" type="AudioStreamPlayer" parent="Sounds/BlinkingStatic"]
stream = SubResource( 150 )
pitch_scale = 1.2
bus = "GameSfx"

[node name="BlinkStatic5" type="AudioStreamPlayer" parent="Sounds/BlinkingStatic"]
stream = SubResource( 151 )
pitch_scale = 1.2
bus = "GameSfx"

[node name="BlinkStatic6" type="AudioStreamPlayer" parent="Sounds/BlinkingStatic"]
stream = SubResource( 152 )
pitch_scale = 1.2
bus = "GameSfx"

[node name="StraySlide" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource( 153 )
volume_db = -25.0
pitch_scale = 0.8
bus = "GameSfx"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="tree_entered" from="." to="." method="_on_Stray_tree_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_Stray_tree_exiting"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
